--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@ant-design/icons": "^4.7.0",
     "@zeit/next-less": "^1.0.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "sass": "^1.52.1"
   },
