--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@zeit/next-less": "^1.0.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "classname": "^0.0.0",
+    "install": "^0.13.0",
     "next": "12.1.6",
+    "npm": "^8.13.2",
     "react": "18.1.0",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.52.1"
   },
   "devDependencies": {
