--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "@zeit/next-less": "^1.0.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -21,6 +23,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.52.1"
   },
