--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classname": "^0.0.0",
+    "image-size": "^1.0.1",
     "install": "^0.13.0",
     "next": "12.1.6",
     "npm": "^8.13.2",
