--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@zeit/next-less": "^1.0.1",
+    "antd": "^4.21.7",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "classname": "^0.0.0",
